# mlops_drifting

./: README.md  commands.txt  data_drift_report.json  data_wrangling.ipynb  generate_evidently_report.py  ground_truth_data.csv  model_training.py  performance_report.json  production_data.csv  push_evidently_to_prometheus.py  pyproject.toml  training_data.csv
