[tool.poetry]
name = "mlops-drifting"
version = "0.1.0"
description = ""
authors = ["swapnanilsharma <swapnanilsharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.21.0"
evidently = "^0.4.39"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
